# cppopengl

./: .gitignore  CMakeLists.txt  utility.cmake
codegen/: codegen.bat  codegen.py  codegen.sh  test_context.hpp
codegen/scripts/: codegen.py  codegen_cli.py  parse_glspec.py
include/cppopengl/: context.hpp  cppopengl.hpp  enum.hpp  gl.hpp  object_id.hpp  program.hpp  shader.hpp  texture.hpp  type.hpp  unique.hpp  vao.hpp  vbo.hpp
include/cppopengl/detail/: context_api.hpp  gl.hpp  object_id.hpp  type_traits.hpp  unique_id.hpp  utility.hpp
test/: CMakeLists.txt
test/lib/glad/: CMakeLists.txt
test/lib/glad/4_1/include/glad/: glad.h
test/lib/glad/4_1/src/: glad.c
test/lib/glad/4_3/include/glad/: glad.h
test/lib/glad/4_3/src/: glad.c
test/lib/glad/4_6/include/glad/: glad.h
test/lib/glad/4_6/src/: glad.c
test/test_glad/: CMakeLists.txt  test.cpp
test/test_id/: CMakeLists.txt  test.cpp
test/test_unique/: CMakeLists.txt  test.cpp
